Fix minor grid layout issue

--- a/apps/storybook/stories/foundations/colors/colors.module.css
+++ b/apps/storybook/stories/foundations/colors/colors.module.css
@@ -30,6 +30,7 @@
 
   &:nth-child(3) {
     grid-area: 2 / 2 / 3 / 3;
+    align-self: flex-end;
   }
 }
 
